# paketmanager-rust

./: Cargo.toml  README.md
config/: settings.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs  state.rs  ui.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
