
[workspace]
members = ["crates/core", "crates/db", "crates/app", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Hermes RS"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
time = { version = "0.3", features = ["macros", "serde", "formatting"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
directories = "5.0"
toml = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
rfd = "0.14"
crossbeam-channel = "0.5"
rand = "0.8"
regex = "1.10"
